# kepler

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .mxproject  CMakeLists.txt  Makefile  config.h  ctb.ioc  kepler.ioc  main.c
.cubemx/: .cubemx.ioc  .mxproject
.cubemx/Inc/: i2c.h  main.h  stm32f7xx_it.h  usart.h
.cubemx/Src/: gpio.c  i2c.c  main.c  sdmmc.c  spi.c  stm32f7xx_it.c  usart.c
Inc/: ctb.h  gpio.h  icm20948.h  imu.h  kepler.h  main.h  stm32f7xx_hal_conf.h  uart.h  usart.h
Src/: ctb.c  gpio.c  icm20948.c  kepler.c  main.c  mpl315a2.c  spi.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c  uart.c  usart.c
Src/imc-c/: Acceleration.h  EstimatedState.h  Header.h  Heartbeat.h  IMC.h  LoggingControl.h  Serialization.h
bsp/: board.mk  trace.h
bsp/isnwo/: Config.hpp  board.c  board.h  bsp.cmake  bsp.cpp  kepler.cfg
bsp/isnwo/cfg/: mcuconf.h
bsp/stm32f767zi-nucleo44/: Config.hpp  Makefile  board.c  board.h  board.mk  bsp.cmake  bsp.cpp
cmake/: ChibiOS.cmake  Toolchain.cmake
conf/: stm32f767-testboard-1.h  stm32f767zi-discovery.h
inc/: clock.h  debug.h  i2c.h  imu.h  led.h  log.h  main.h  mpl315a2.h  spi.h  stm32f7xx_it.h
inc/bsp/stm32f7/: clock.h  debug.h  gpio.h  i2c.h  imu.h  led.h  spi.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h  usart.h
inc/bsp/stm32f7/sdcard/: bsp_driver_sd.h  ffconf.h
inc/kepler/: main.h
inc/sdcard/: bsp_driver_sd.h  ffconf.h
scripts/: kepler.cfg
src/: Config.hpp  clock.c  dma.c  gpio.c  i2c.c  kepler.c  kepler.hpp  log.c  main.c  main.cpp  mpl315a2.c  sdmmc.c  spi.c  stm32f7xx_it.c  usart.c
src/bsp/sdcard/: bsp_driver_sd.c  diskio.c  fatfs.c  ff.c  ff_gen_drv.c  sd_diskio.c
src/bsp/stm32f7/: clock.c  gpio.c  i2c.c  icm20948.c  sdmmc.c  spi.c  stm32f7xx_it.c  usart.c
src/data/: Attitude.hpp  BasicData.hpp  GpsFix.hpp  Pressure.hpp  Temperature.hpp
src/driver/: Altimeter.hpp  GPS.hpp  IMU.hpp  MPL3115A2.cpp  MPL3115A2.hpp
src/driver/mock/: Altimeter.hpp  IMU.hpp
src/driver/mpl3115a2/: MPL3115A2.cpp  MPL3115A2.hpp
src/sdcard/: bsp_driver_sd.c  diskio.c  fatfs.c  ff.c  ff_gen_drv.c  sd_diskio.c
